<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/box_one"
            style="@style/White_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/box_one"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_two"
            style="@style/White_box"
            android:layout_width="130dp"
            android:layout_height="190dp"
            android:layout_margin="16dp"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one" />

        <TextView
            android:id="@+id/box_three"
            style="@style/White_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toTopOf="@+id/box_two" />

        <TextView
            android:id="@+id/box_five"
            style="@style/White_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/box_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toBottomOf="@+id/box_four" />

        <TextView
            android:id="@+id/box_four"
            style="@style/White_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/box_four"
            app:layout_constraintBottom_toTopOf="@+id/box_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box_two"
            app:layout_constraintTop_toBottomOf="@+id/box_three" />

        <TextView
            android:id="@+id/heading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:layout_marginStart="16dp"
            android:text="@string/heading_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/instructions"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/instructions_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heading"
            app:layout_constraintTop_toBottomOf="@+id/box_two"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:text="@string/red"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_wide"
            android:text="@string/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/green_button"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintTop_toBottomOf="@+id/instructions"
            app:layout_constraintVertical_bias="0.2"/>

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/green"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yellow_button"
            app:layout_constraintVertical_bias="0.05" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>